--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -14,16 +14,17 @@
 \makeatletter
 \addto\shorthandsspanish{\let\esperiod\es@period@code}
 \makeatother
-
-
+% \usepackage{colortbl}
+\usepackage[xcdraw]{xcolor}
 %\usepackage[chapter]{algorithm}
 \RequirePackage{verbatim}
 %\RequirePackage[Glenn]{fncychap}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{afterpage}
-
+\usepackage{makecell}
 \usepackage{longtable}
+\usepackage{tabularx}
 
 \usepackage[pdfborder={0 0 0}]{hyperref} %referencia
 
