--- a/Memoria/capitulos/05_Analisis.tex
+++ b/Memoria/capitulos/05_Analisis.tex
@@ -1,1 +1,100 @@
 \chapter{Análisis del problema}
+
+
+\section{Historias de Usuario}
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU1                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero registrarme en la aplicación para poder comenzar \\ a utilizar sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la \\ base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad \\ del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU2                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero iniciar sesión en la aplicación para poder \\ acceder a sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU1                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero registrarme en la aplicación para poder comenzar a utilizar \\ sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU1                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero registrarme en la aplicación para poder comenzar a utilizar \\ sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU1                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero registrarme en la aplicación para poder comenzar a utilizar \\ sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[h]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                                                                  & HU1                                                                                                                                                                                                                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero registrarme en la aplicación para poder comenzar a utilizar \\ sus funcionalidades.\end{tabular}}                                                                                                                                                                                                \\ \hline
+            \textbf{PH}                                                                  & 1                                                                                                                                                                                                                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá registrarse en el sistema rellenando un formulario con campos \\ como el nombre de usuario, el correo electrónico, la contraseña... \end{tabular}}                                                                                                                                                  \\ \hline
+            \textbf{Prioridad}                                                           & 1                                                                                                                                                                                                                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                                                                                                                                                                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 1\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán almacenados en la base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad del usuario \end{tabular}}                                                                                                                                                                                                                                                                                                                                                                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+\section{Diagrama de Clases}
