--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -20,6 +20,9 @@ Para calcular la velocidad, vamos a considerar las horas de trabajo que se prete
 \item Si multiplicamos un programador por los 3 días de trabajo reales, obtenemos que deberíamos completar \textbf{3 PH} por sprint aproximadamente.
 \end{itemize}
 
+\textit{Nota: La duración de los Sprints puede variar en función de factores externos al proyecto. Pero se tratará de que duren 2 semanas para seguir un ritmo de trabajo constante.}
+
+\textit{Nota 2: Puesto que estamos realizando estimaciones y suposiciones para la planificación, esta está sujeta a cambios a lo largo del proyecto.}
 \section{Product Backlog}
 A continuación, se listarán todas las historias de usuario ordenadas por prioridad de acuerdo a la importancia que tienen para el usuario final del producto.
 \begin{itemize}
@@ -29,7 +32,7 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU7 - } Como usuario quiero empezar un test de una lección. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU8 - } Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 0.5)
-    \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 2)
+    \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 3)
     \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU14 - } Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
@@ -56,103 +59,143 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
 Nuestro proyecto se va a desarrollar en distintos Sprints, que son iteraciones de trabajo que se van a realizar en el proyecto.
 Cada Sprint tendrá una duración de 2 semanas, y se pretenden realizar
 \subsection{Sprint \#1 - Documentación inicial}
-\textit{24/11/2022   -   10/12/2022}
+\textit{24/11/2022   -   08/12/2022}
 
 En este Sprint se realizará:
 \begin{itemize}
 
     \item Definición del proyecto y del alcance.
-    \item Capítulo 1 - Introducción.
-    \item Capítulo 2 - Estado del Arte.
+    \item Redactar Capítulo 1 - Introducción.
+    \item Redactar Capítulo 2 - Estado del Arte.
 \end{itemize}
 \subsection{Sprint \#2 - Documentación de requisitos}
 En este Sprint se planea realizar:
-\textit{10/12/2022   -   12/01/2023}
+\textit{08/12/2022   -   12/01/2023}
 \begin{itemize}
     \item Revisión de la documentación inicial y corrección de errores.
-    \item Capítulo 3 - Especificación de Requisitos.
+    \item Redactar Capítulo 3 - Especificación de Requisitos.
 \end{itemize}
 
 \subsection{Sprint \#3 - Documentación de HU}
-\textit{12/01/2023   -   26/02/2023}
+\textit{12/01/2023   -   03/02/2023}
 En este Sprint se realizará:
 \begin{itemize}
     \item Revisión de la documentación de requisitos y corrección de errores.
-    \item Capítulo 4 - Planificación.
-    \item Capítulo 5 - Análisis del problema.
+    \item Redactar Capítulo 4 - Planificación.
+    \item Redactar Capítulo 5 - Análisis del problema.
 \end{itemize}
 \subsection{Sprint \#4 - Diseño y comienzo del desarrollo}
-\textit{26/02/2023   -   09/03/2023}
+\textit{03/02/2023   -   17/02/2023}
 En este Sprint se terminará la documentación y comenzará el desarrollo con:
 \begin{itemize}
-    \item Capítulo 6 - Diseño.
+    \item Redactar Capítulo 6 - Diseño.
     \item Preparación del backend para el desarrollo.
     \begin{itemize}
-        \item creación de la base de datos.
-        \item creación de los modelos, rutas y controladores del servidor con NodeJS.
+        \item Creación de la base de datos.
+        \item Creación de los modelos, rutas y controladores del servidor con NodeJS.
     \end{itemize}
     \item Preparación del frontend para el desarrollo (creación de la aplicación de Flutter).
 \end{itemize}
 \subsection{Sprint \#5 - Registro y login de usuarios}
-\textit{09/03/2023   -   23/03/2023}
+\textit{17/02/2023   -   03/03/2023}
 \begin{itemize}
-    \item Realizar la HU1 - Como alumno quiero registrarme en la aplicación.
-    \item Realizar la HU2 - Como alumno quiero iniciar sesión en la aplicación.
-    \item Realizar la HU6 - Como usuario quiero seleccionar una lección para leer el temario.
-    \item Realizar la HU7 - Como usuario quiero empezar un test de una lección. 
+    \item Realizar la HU1 - Como alumno quiero registrarme en la aplicación. (Prioridad: Alta | Puntos de Historia: 1)
+    \item Realizar la HU2 - Como alumno quiero iniciar sesión en la aplicación. (Prioridad: Alta | Puntos de Historia: 1)
+    \item Realizar la HU6 - Como usuario quiero seleccionar una lección para leer el temario. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item Realizar la HU7 - Como usuario quiero empezar un test de una lección. (Prioridad: Alta | Puntos de Historia: 0.5)
 \end{itemize}
 
 
-\subsection{Sprint \#6}
-\textit{23/03/2023   -   06/04/2023}
+\subsection{Sprint \#6 - Tests y progreso}
+\textit{03/03/2023   -   17/03/2023}
 \begin{itemize}
-    \item d
-    \item d
-    \item d
-    \item d
+    \item Realizar la HU8 - Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item Realizar la HU9 - Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item Realizar la HU11 - Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item Realizar la HU12 - Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
 
 \end{itemize}
 
-\subsection{Sprint \#7}
-\textit{06/04/2023   -   20/04/2023}
+\subsection{Sprint \#7 - Entrada de micrófono y detección de tono}
+\textit{17/03/2023   -   31/03/2023}
 \begin{itemize}
-    \item d
-    \item d
-    \item d
-    \item d
-
+    \item Realizar la HU10 - Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 3)
 \end{itemize}
 
-\subsection{Sprint \#8}
-\textit{20/04/2023   -   04/05/2023}
-
-
-\subsection{Sprint \#9}
-\textit{04/05/2023   -   18/05/2023}
-
-
-\subsection{Sprint \#10}
-\textit{18/05/2023   -   01/06/2023}
-
-
-\subsection{Sprint \#11 - }
-\textit{01/06/2023   -   15/06/2023}
-
-
-\subsection{Sprint \#12 - Pruebas y finalización del proyecto}
-\textit{15/06/2023   -   29/06/2023}
-
-
-\subsection{Sprint \#13 - Pruebas y finalización del proyecto}
-\textit{29/06/2023   -   15/07/2023}
+\subsection{Sprint \#8 - Funcionalidades del profesor con lecciones}
+\textit{31/03/2023   -   14/04/2023}
 \begin{itemize}
-    \item Realizar pruebas de integración
-    \item Realizar pruebas de unidad
-    \item Capítulo 8 - Pruebas
-    \item Capítulo 9 - Conclusiones
-    \item Revisión de todo el documento y corrección de errores
+
+\item Realizar la HU13 - Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU14 - Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU15 - Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU16 - Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 1)
+\item Realizar la HU17 - Como profesor quiero eliminar imágenes de una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+\end{itemize}
+
+\subsection{Sprint \#9 - Funcionalidades del profesor con tests}
+\textit{14/04/2023   -   28/04/2023}
+\begin{itemize}
+
+\item Realizar la HU18 - Como profesor quiero añadir preguntas a un test del tipo selección múltiple. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU19 - Como profesor quiero añadir preguntas a un test del tipo selección única. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU20 - Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 1)
+\item Realizar la HU21 - Como profesor quiero eliminar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.25)
+\item Realizar la HU22 - Como profesor quiero modificar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.5)
+\end{itemize}
+
+\subsection{Sprint \#10 - Funcionalidades del administrador y ranking}
+\textit{28/04/2023   -   12/05/2023}
+\begin{itemize}
+\item Realizar la HU24 - Como administrador quiero modificar los datos de un usuario. (Prioridad: Media | Puntos de Historia: 1)
+\item Realizar la HU25 - Como administrador quiero eliminar un usuario. (Prioridad: Media | Puntos de Historia: 0.5)
+\item Realizar la HU23 - Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
+\item Realizar la HU12 - Como usuario quiero ver el ranking de usuarios. (Prioridad: Baja | Puntos de Historia: 0.5)
+\end{itemize}
+
+\subsection{Sprint \#11 - Pruebas y finalización del proyecto}
+\textit{12/05/2023   -   26/05/2023}
+\begin{itemize}
+    \item Realizar la HU5 - Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 0.5)
+    \item Realizar la HU3 - Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item Realizar la HU4 - Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+    \end{itemize}
+    
+    \subsection{Sprint \#12 - Pruebas, conclusión y finalización del proyecto}
+\textit{26/05/2023   -   09/06/2023}
+\begin{itemize}
+
+    \item Redactar Capítulo 7 - Implementación
+    \item Realizar mejoras de código.
+
+\end{itemize}
+\subsection{Sprint \#13 - Pruebas y mejoras}
+\textit{09/06/2023   -   23/06/2023}
+\begin{itemize}
+    \item Realizar pruebas de integración.
+    \item Realizar pruebas de unidad.
+    \end{itemize}
+
+\subsection{Sprint \#14 - Pruebas, conclusión y finalización del proyecto}
+\textit{23/06/2023   -   15/07/2023}
+\begin{itemize}
+
+    \item Redactar Capítulo 8 - Pruebas.
+    \item Redactar Capítulo 9 - Conclusiones.
+    \item Revisión de todo el documento y corrección de errores.
 \end{itemize}
 
 
 
 \section{Diagrama de Gantt}
+
+
+\begin{figure}[H]
+
+    \centering
+    \centerline{\includegraphics[width=1.25\textwidth]{imagenes/c4/gantt.png}}
+    \caption{Diagrama de Gantt de la planificación del proyecto, divivido por Sprints.}
+    \label{fig:artly}
+    
+    
+\end{figure}
